--- a/src/HomePage/login.css
+++ b/src/HomePage/login.css
@@ -3,7 +3,7 @@
   color: #58acff;
   width: 246px;
   height: 40px;
-  border: 1px solid #58acff;;
+  /* border: 1px solid #58acff;; */
   text-align: center;
 }
 .login-fields-heading-outer {
@@ -25,7 +25,7 @@
 }
 .login-image-style {
   background-image: url("../Assests/LoginForm.jpeg");
-  background-size: 40%;
+  background-size: 44%;
   background-repeat: no-repeat;
   border-bottom-left-radius: 12px;
   border-top-left-radius: 12px;
