--- a/src/More/aboutUs.css
+++ b/src/More/aboutUs.css
@@ -23,9 +23,10 @@
 .about-all-content {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
   text-align: justify;
-  justify-content: center;
+
+  padding-left: 16%;
 }
 .about-all-content h3 {
   font-family: "Cinzel";
@@ -70,7 +71,18 @@
   padding-top: 20px;
   margin-bottom: 0px;
 }
-
+.about-us-heading-outer {
+  border-left: 4px solid #c438ef;
+  padding-left: 15px;
+  margin-left: -1vh;
+  margin-top: 1px;
+  color: white;
+  margin-bottom: 11px;
+  font-family: "Cinzel";
+  letter-spacing: 2px;
+  padding-top:4px;
+  color: white;
+}
 @media only screen and (max-width: 900px) {
   .about-main-style {
     display: flex;
@@ -80,11 +92,10 @@
     padding: 50px 0px;
   }
   .about-all-content {
-    padding-top: 30px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
+    align-items: flex-start;
+    padding: 40px 12px;
+    text-align: justify;
   }
 }
