--- a/src/NFT-Dashboard/newNftSlider.css
+++ b/src/NFT-Dashboard/newNftSlider.css
@@ -91,7 +91,7 @@
 
 .image-slider-style{
     /* margin-left: 120px; */
-    margin-left: 152px;
+    margin-left: 143px;
     border-radius: 12px;
     box-shadow: 2px 2px 20px rgb(0 0 0 / 20%);
 
@@ -108,6 +108,11 @@
             box-shadow: 0 1px 8px rgb(0 0 0 / 30%);
             color: #ffff;
             border: none;
+        }
+        .image-slider-style{
+            margin-left: 90px;
+            border-radius: 12px;
+            box-shadow: 2px 2px 20px rgb(0 0 0 / 20%);
         }
 
   }
