--- a/src/NFT-Dashboard/withDrawModal.css
+++ b/src/NFT-Dashboard/withDrawModal.css
@@ -102,7 +102,10 @@ width: 64%;
     border-radius: 12px;
     width: 15%;
   
-    background-color: #393469;    border:none;
+    background-color: #58acff;
+    font-family: Cinzel;
+    
+      border:none;
     box-shadow: 0 1px 8px rgb(0 0 0 / 30%);
 }
 .modal-size-withDraw{
@@ -121,8 +124,88 @@ width: 64%;
         color: white;
         border-radius: 12px;
         width: 50%;
-        background-color: #393469;
+        background-color: #58acff;
+        font-family: Cinzel;
+        
         border: none;
         box-shadow: 0 1px 8px rgb(0 0 0 / 30%);
       }
+      .withDrawModal-heading{
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        padding: 10px 12px;
+        background-color: #393469;
+        border-radius: 12px;
+        justify-content: flex-start;
+    
+        box-shadow: 0 1px 8px rgb(0 0 0 / 30%);
+    }
+    .withDraw-address {
+        padding-left: 4%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 30px;
+    }
+    .withdraw-address-field {
+        margin-left: 0px;
+        padding: 5px 12px;
+        background-color: #393469;
+        border-radius: 12px;
+        outline: none;
+        border: none;
+        width: 90%;
+    }
+    .withDraw-network {
+        padding-left: 4%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 30px;
+    }
+    .withDraw-network-field {
+        font-size: 15px;
+        line-height: 1.8;
+        outline: none;
+        color: #a79393;
+        font-family: monterserat;
+        margin-left: 0px;
+        padding: 5px 12px;
+        background-color: #393469;
+        border-radius: 12px;
+        border: none;
+        width: 90%;
+    }
+    .withDraw-Amount {
+        padding-left: 4%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 30px;
+    }
+    .withDraw-Amount-field {
+        margin-left: 0px;
+        padding: 5px 12px;
+        background-color: #393469;
+        border-radius: 12px;
+        outline: none;
+        border: none;
+        width: 90%;
+    }
+    .withDraw-Receive {
+        padding-left: 4%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        padding-top: 30px;
+    }
+    .withDraw-recieve-field {
+        margin-left: 0px;
+        margin-top: 0px;
+        padding: 5px 12px;
+        outline: none;
+        border-radius: 12px;
+    }
+    
   }
