--- a/src/Careers/path.css
+++ b/src/Careers/path.css
@@ -10,6 +10,7 @@
   color: white;
 padding-top: 12px;
 text-align: center;
+font-family: Nuninto;
 }
 
   
@@ -30,6 +31,7 @@ text-align: center;
  text-align: center;
  padding: 40px 0px ;
  color: white;
+ font-family: 'Cinzel';
 }
 .sections-style{
 padding-left: 30px;}
