--- a/src/HomePage/buyForm.css
+++ b/src/HomePage/buyForm.css
@@ -183,11 +183,11 @@
   .trading-fee-flex {
     padding-top: 11px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     font-size: 11px;
     align-items: center;
-  }
+}
   .tax-fee-flex {
     display: flex;
     flex-direction: column;
