--- a/src/Careers/careers.css
+++ b/src/Careers/careers.css
@@ -2,7 +2,7 @@
   /* background-color: #f0f2f5; */
 }
 .carers-footer-height {
-  margin-top: 100%;
+  /* margin-top: 100%; */
 }
 
 @media screen and (max-width: 900px) {
