--- a/src/HomePage/team.css
+++ b/src/HomePage/team.css
@@ -32,14 +32,23 @@
   color: white;
   border-radius: 20px;
   text-align: center;
-  padding: 12px;
+  /* padding: 12px; */
   margin-top: 50px;
   box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
+}
+.team-member-top-background {
+  background-color: #494487;
+  height: 120px;
+  width: 300px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
 .team-member-image-style {
   height: 150px;
   width: 150px;
   border-radius: 100px;
+  border: 2px solid white;
+  margin-top: -98px;
 }
 .team-member-background h3 {
   font-family: Cinzel;
@@ -51,6 +60,8 @@
 .team-member-background p {
   max-width: 400px;
   font-family: Nuninto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .team-members-inner-flex {
@@ -103,8 +114,15 @@
     color: white;
     border-radius: 20px;
     text-align: center;
-    padding: 12px;
+    /* padding: 12px; */
     margin-top: 50px;
     box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
+  }
+  .team-member-top-background {
+    background-color: #494487;
+    height: 120px;
+    width: 320px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
   }
 }
