--- a/src/HomePage/work.css
+++ b/src/HomePage/work.css
@@ -77,7 +77,13 @@
 .mbl-img-work {
   display: none;
 }
+.work-resp-back{
+  display: block;
+}
 @media only screen and (max-width: 900px) {
+  .work-resp-back{
+    display: none;
+  }
   .work-heading-outer {
     border-left: 4px solid #c438ef;
     padding-left: 15px;
@@ -105,8 +111,10 @@
   }
   .mbl-img-work {
     display: block;
-    height: 400px;
-    width: 100%;
+    height: 311px;
+    width: 314px;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
   }
   .work-content-section-backgroud {
     background-color: #262250;
