--- a/src/HomePage/roxo.css
+++ b/src/HomePage/roxo.css
@@ -17,7 +17,7 @@
 .buy-image-style{
   height: 585px;
   width: 600px;
-  margin-left: 60px;
+  margin-left: 130px;
 
 }
 .buy-button-style  a{
@@ -25,15 +25,15 @@
   color: white;
 }
 .buy-button-style{
-  text-decoration: none;
-  font-weight: 500;
-  border-radius: 20px;
-  color: #ffffff;
   background: #d72843;
-  width: 30%;
   border: none;
+  border-radius: 20px;
+  font-family: 'Nuninto';
+  font-weight: 900;
   padding: 5px 10px;
-  font-family: "Cinzel";
+  width: 50%;
+  font-size: 25px;
+  height: 50px;
 
 }
 .roxo-heading-style{
@@ -46,7 +46,7 @@
   font-family: "Cinzel";
 }
 .buy-text-section h2{
-  font-family: Nuninto;
+  font-family: Cinzel;
   font-weight: bold;
 }
 .buy-text-section p{
@@ -57,7 +57,7 @@ font-family: Nuninto;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
 }
 .buy-text-section h3{
   padding: 12px 0px
