--- a/src/HomePage/team.css
+++ b/src/HomePage/team.css
@@ -28,7 +28,7 @@
 .team-member-background {
   background-color: #262250;
   width: 300px;
-  height: 450px;
+  height: 384px;
   color: white;
   border-radius: 20px;
   text-align: center;
@@ -55,8 +55,8 @@
   padding-top: 12px;
 }
 .team-member-background h5 {
-  font-family: Cinzel;
-}
+  font-family: 'Nuninto';
+  font-weight: 400;}
 .team-member-background p {
   max-width: 400px;
   font-family: Nuninto;
@@ -107,17 +107,27 @@
     margin-bottom: 38px;
     font-family: "Cinzel";
   }
+  /* .team-member-background {
+    background-color: #262250;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
+    color: #fff;
+    height: 378px;
+    margin-top: 50px;
+    text-align: center;
+    width: 300px;
+  } */
   .team-member-background {
     background-color: #262250;
     width: 320px;
-    height: 420px;
+    height: 384px;
     color: white;
     border-radius: 20px;
     text-align: center;
     /* padding: 12px; */
     margin-top: 50px;
     box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
-  }
+}
   .team-member-top-background {
     background-color: #494487;
     height: 120px;
