--- a/src/HomePage/walletModal.css
+++ b/src/HomePage/walletModal.css
@@ -35,7 +35,7 @@
   padding: 4px 20px;
 }
 .wallet-colose-btn svg {
-  color: red;
+  color: #58acff;
   /* margin-right: 3px; */
   margin-top: 14px;
 }
